@@ -79,8 +79,6 @@ public:
 	gcc_printf(2,3)
 	bool Format(const char *fmt, ...) noexcept;
 
-	static constexpr size_t MAX_BINARY_SIZE = 8192;
-
 	/**
 	 * Write a binary chunk; this writes the "binary" line, the
 	 * given chunk and the trailing newline.
