@@ -1,5 +1,6 @@
 ver 0.22.4 (not yet released)
 * protocol
+  - add command "binarylimit" to allow larger chunk sizes
   - fix "readpicture" on 32 bit machines
   - show duration and tags of songs in virtual playlist (CUE) folders
 * storage
